--- a/app/views/notifications/index.html
+++ b/app/views/notifications/index.html
@@ -1,7 +1,6 @@
 {% extends "layout.html" %}
-{% set title = 'Manage notifications' %}
-{% set navActive = 'notifications' %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "Manage notifications" %}
+{% set navActive = "notifications" %}
 
 {% block content %}
 <div class="govuk-grid-row">
@@ -19,9 +18,9 @@
           <p>You'll receive notifications for courses that you're the accredited body for when:</p>
           <ul class="govuk-list govuk-list--bullet">
             <li>a new course is published to Find postgraduate teacher training</li>
-				    <li>a change to an existing course is made</li>
-				    <li>a course is withdrawn</li>
-				    <li>the vacancy status of a course is changed</li>
+            <li>a change to an existing course is made</li>
+            <li>a course is withdrawn</li>
+            <li>the vacancy status of a course is changed</li>
           </ul>
         </div>
 
