--- a/app/views/organisation/notification-enabled.html
+++ b/app/views/organisation/notification-enabled.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
-{% block pageTitle %}{{ data['training-provider-name'] }}{% endblock %}
+{% set title = data["training-provider-name"] %}
+
 {% block breadcrumbs %}
   {% if data['rolled-over'] %}
     {{
