--- a/app/views/users/check.html
+++ b/app/views/users/check.html
@@ -1,7 +1,6 @@
 {% extends "layout.html" %}
-{% set title = 'Check permissions before you invite the user' %}
-{% block pageTitle %}{{ title }}{% endblock %}
-{% set navActive = 'users' %}
+{% set title = "Check permissions before you invite the user" %}
+{% set navActive = "users" %}
 
 {% block breadcrumbs %}
   {{ govukBackLink({
