--- a/app/views/users/next-org.html
+++ b/app/views/users/next-org.html
@@ -1,7 +1,6 @@
 {% extends "layout.html" %}
-{% set title = 'You are now about to assign permissons for the next provider' %}
-{% block pageTitle %}{{ title }}{% endblock %}
-{% set navActive = 'users' %}
+{% set title = "You are now about to assign permissons for the next provider" %}
+{% set navActive = "users" %}
 
 {% block breadcrumbs %}
   {{ govukBackLink({
@@ -23,7 +22,7 @@
       <p class="govuk-!-margin-bottom-8">You have one more provider to set permissons for.</p>
 
       <a href="/users/manage-courses-2" class="govuk-button">Continue to permissions for Beech Hill</a>
-     
+
     </div>
   </div>
 
