--- a/app/views/users/permissions-1.html
+++ b/app/views/users/permissions-1.html
@@ -1,7 +1,6 @@
 {% extends "layout.html" %}
-{% set title = 'Permissions for Achieve with TELA' %}
-{% block pageTitle %}{{ title }}{% endblock %}
-{% set navActive = 'users' %}
+{% set title = "Permissions for Achieve with TELA" %}
+{% set navActive = "users" %}
 
 {% block breadcrumbs %}
   {{ govukBackLink({
