--- a/app/views/users/permissions-2.html
+++ b/app/views/users/permissions-2.html
@@ -1,7 +1,6 @@
 {% extends "layout.html" %}
-{% set title = 'Select permissions for Beech Hill' %}
-{% block pageTitle %}{{ title }}{% endblock %}
-{% set navActive = 'users' %}
+{% set title = "Select permissions for Beech Hill" %}
+{% set navActive = "users" %}
 
 {% block breadcrumbs %}
   {{ govukBackLink({
