--- a/app/views/notifications/multi-org-extended.html
+++ b/app/views/notifications/multi-org-extended.html
@@ -1,7 +1,6 @@
 {% extends "layout.html" %}
-{% set title = 'Manage notifications' %}
-{% set navActive = 'notifications' %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "Manage notifications" %}
+{% set navActive = "notifications" %}
 
 {% block content %}
 <div class="govuk-grid-row">
@@ -61,7 +60,7 @@
             ]
           }) }}
         {% endset -%}
-        
+
         {% set options2 %}
           {{ govukCheckboxes({
             name: "options2",
@@ -104,7 +103,7 @@
             ]
           }) }}
         {% endset -%}
-        
+
         {% set options3 %}
           {{ govukCheckboxes({
             name: "options3",
@@ -147,7 +146,7 @@
             ]
           }) }}
         {% endset -%}
-        
+
 
         {{ govukCheckboxes({
           name: "notifications",
@@ -179,7 +178,7 @@
               text: "Temple Newsam Learning Partnership",
               value: "value3",
               html: "<strong>Temple Newsam Learning Partnership</strong>",
-              checked: checked("notifications", "value3"), 
+              checked: checked("notifications", "value3"),
               conditional: {
                 html: options3
               }
