--- a/app/views/notifications/multi-org.html
+++ b/app/views/notifications/multi-org.html
@@ -1,7 +1,6 @@
 {% extends "layout.html" %}
-{% set title = 'Manage notifications' %}
-{% set navActive = 'notifications' %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "Manage notifications" %}
+{% set navActive = "notifications" %}
 
 {% block content %}
 <div class="govuk-grid-row">
