--- a/app/views/users/index.html
+++ b/app/views/users/index.html
@@ -1,7 +1,6 @@
 {% extends "layout.html" %}
-{% set title = 'Users' %}
-{% block pageTitle %}{{ title }}{% endblock %}
-{% set navActive = 'users' %}
+{% set title = "Users" %}
+{% set navActive = "users" %}
 
 {% block breadcrumbs %}{{ macros.breadcrumbs(breadcrumbItems())}}{% endblock %}
 
