Remove remaining occurances of backLink macro

--- a/app/views/users/delete-user.html
+++ b/app/views/users/delete-user.html
@@ -1,8 +1,7 @@
 {% extends "layout.html" %}
 {% set title = "-" %}
+{% set backLink = "/users/show" %}
 {% set navActive = "users" %}
-
-{% block backLink %}{{ macros.backLink('/users/show') }}{% endblock %}
 
 {% block content %}
   <div class="govuk-grid-row">
