--- a/app/views/users/show.html
+++ b/app/views/users/show.html
@@ -1,8 +1,7 @@
 {% extends "layout.html" %}
 {% set title = "Ross Anderson" %}
+{% set backLink = "/users" %}
 {% set navActive = "users" %}
-
-{% block backLink %}{{ macros.backLink('/users') }}{% endblock %}
 
 {% block content %}
   <div class="govuk-grid-row">
