--- a/app/views/ucas/apply-preferences.html
+++ b/app/views/ucas/apply-preferences.html
@@ -59,11 +59,11 @@
             Postal address
           </dt>
           <dd class="govuk-summary-list__value">
-            {{ value('ucas-postal-address-building-and-street') }}<br />
-            {% if value('ucas-postal-address-building-and-street-2') %}{{ value('ucas-postal-address-building-and-street-2') }}<br />{% endif %}
-            {{ value('ucas-postal-address-organisation-town-or-city') }}<br />
-            {{ value('ucas-postal-address-county') }}<br />
-            {{ value('ucas-postal-address-postcode') }}<br />
+            {{ value('building-and-street') }}<br />
+            {% if value('building-and-street-2') %}{{ value('building-and-street-2') }}<br />{% endif %}
+            {{ value('town-or-city') }}<br />
+            {{ value('county') }}<br />
+            {{ value('postcode') }}<br />
           </dd>
           <dd class="govuk-summary-list__actions">
             <a href="/ucas/postal-address">
