--- a/app/views/about-your-organisation/_errors.html
+++ b/app/views/about-your-organisation/_errors.html
@@ -1,4 +1,4 @@
-{% if data['about-your-organisation-show-publish-errors'] and errors.length > 0 %}
+{% if data["about-your-organisation-show-publish-errors"] and errors.length > 0 %}
   {{ govukErrorSummary({
     titleText: "We couldn’t publish this because some information was missing",
     errorList: errors
