--- a/app/views/ucas/postal-address.html
+++ b/app/views/ucas/postal-address.html
@@ -12,12 +12,12 @@
       <form action="/ucas/apply-preferences" method="post">
         <p>UCAS will use this address to send you letters and documents.</p>
 
-        {{ macros.textbox('ucas-postal-address-building-and-street', 'Building and street', null, 'govuk-!-width-full', null, errors) }}
-        {{ macros.textbox('ucas-postal-address-building-and-street-2', null, null, 'govuk-!-width-full', null, errors) }}
+        {{ macros.textbox('building-and-street', 'Building and street', null, 'govuk-!-width-full', null, errors) }}
+        {{ macros.textbox('building-and-street-2', null, null, 'govuk-!-width-full', null, errors) }}
 
-        {{ macros.textbox('ucas-postal-address-organisation-town-or-city', 'Town or city', null, 'form-control', null, errors) }}
-        {{ macros.textbox('ucas-postal-address-county', 'County', null, 'form-control', null, errors) }}
-        {{ macros.textbox('ucas-postal-address-postcode', 'Postcode', null, 'form-control-small', null, errors) }}
+        {{ macros.textbox('town-or-city', 'Town or city', null, 'form-control', null, errors) }}
+        {{ macros.textbox('county', 'County', null, 'form-control', null, errors) }}
+        {{ macros.textbox('postcode', 'Postcode', null, 'form-control-small', null, errors) }}
 
         <div class="form-group add-double-bottom-margin">
           <input type="submit" class="govuk-button" value="Save">
