Remove formattingBox macro

--- a/app/views/about-your-organisation/about.html
+++ b/app/views/about-your-organisation/about.html
@@ -84,7 +84,9 @@
       </div>
 
       <div class="govuk-grid-column-one-third">
-        {{ macros.formattingBox() }}
+        <div class="add-double-bottom-margin status-box">
+          {{ macros.formatting() }}
+        </div>
       </div>
     </div>
 
