--- a/app/views/allocations/request-places.html
+++ b/app/views/allocations/request-places.html
@@ -24,13 +24,12 @@
               <span class="govuk-caption-xl">{{ requestingProviderName }}</span>
               How many places would you like to request?
             </h1>
-            <p class="govuk-body">Say how many trainees the organisation would like to recruit - make sure this number is as accurate as possible.</p>
           </legend>
           <div class="govuk-!-margin-bottom-6">
             <label class="govuk-label" for="event-name">
-              <span class="govuk-visually-hidden">Number of places</span>
+              <span class="govuk-visually-hidden">How many places would you like to request?</span>
             </label>
-            <input class="govuk-input govuk-input govuk-input--width-10" id="requested-amount" name="requested-amount" value="{{ data['requested-amount'] }}" type="text">
+            <input class="govuk-input govuk-input govuk-input--width-10" id="requestedAmount" name="requestedAmount" value="{{ data['requestedAmount'] }}" type="text">
           </div>
 
         <button class="govuk-button" data-module="govuk-button">Continue</button>
