Fix merge issues

--- a/app/views/allocations/index.html
+++ b/app/views/allocations/index.html
@@ -125,7 +125,7 @@
                     </th>
                   </td>
                   <td class="govuk-table__cell">
-                    <span class="govuk-tag govuk-tag-small govuk-tag-table govuk-tag--green">{{ data["requested-amount"] }} places requested</span>
+                    <span class="govuk-tag govuk-tag-small govuk-tag-table govuk-tag--green">{{ data["requestedAmount"] }} places requested</span>
                   </td>
                   <td class="govuk-table__cell">
                     <a href="#" class="govuk-link--no-visited-state">Change</a>
