--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -46,9 +46,8 @@
 
 {% block header %}
   {{ govukHeader({
-    homepageUrl: "#",
+    homepageUrl: "/cycles" if value("rolled-over") else "/",
     productName: serviceName,
-    serviceUrl: "/cycles" if value("rolled-over") else "/",
     containerClasses: "govuk-width-container",
     navigationClasses: "govuk-header__navigation--end",
     navigation: [{
