--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -32,6 +32,7 @@
 {% from "govuk/components/warning-text/macro.njk"        import govukWarningText %}
 
 {% from "_components/icon/macro.njk"                     import appIcon %}
+{% from "_components/notice-summary/macro.njk"                     import appNoticeSummary %}
 
 {% import "macros/macros.njk" as macros %}
 
